--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -17,3 +17,8 @@
     justify-content: space-around;
     align-items: center;
 }
+.user{
+    height: 80%;
+    width: 8rem;
+    background-color: yellow;
+}
