--- a/src/pages/home/HomePage.module.css
+++ b/src/pages/home/HomePage.module.css
@@ -13,7 +13,6 @@
 .body{
     width: 100%;
     height: 40rem;
-
     display: flex;
     flex-direction: row;
 }
@@ -21,9 +20,33 @@
     width: 100%;
     height: 100%;
     background-color: blue;
+    color: white;
+
+    background-image: url('../../../public/Images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .right{
     width: 100%;
     height: 100%;
     background-color: green;
+    display: flex;
+    flex-direction: column;
 }
+.box1{
+    width: 100%;
+    height: 25rem;
+    background-color: red;
+}
+.box2{
+    width: 100%;
+    height: 5rem;
+    background-color: indigo;
+}
+.box3{
+    width: 100%;
+    height: 5rem;
+    background-color: violet;
+}
+
+
