--- a/src/pages/jobs/JobPage.module.css
+++ b/src/pages/jobs/JobPage.module.css
@@ -1,6 +1,34 @@
-.main{
-    height: 100vh;
+.main {
+    min-height: 100vh;
     width: 100vw;
 
     background-color: yellow;
+}
+
+.navbar {
+    width: 100%;
+    height: 5rem;
+    background-color: violet;
+}
+
+.body {
+    width: 100%;
+    min-height: 40rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.box1{
+    width: 80%;
+    min-height: 6rem;
+    background-color: #fff;
+}
+.box2{
+    box-sizing: border-box;
+    margin: .5rem;
+    width: 80%;
+    min-height: 5rem;
+    background-color: green;
 }
