--- a/src/pages/registration/RegisterPage.module.css
+++ b/src/pages/registration/RegisterPage.module.css
@@ -1,7 +1,7 @@
 .main{
     height: 100vh;
     width: 100vw;
-    background-color: red;
+    background-color: purple;
 }
 .navbar{
     width: 100%;
@@ -11,7 +11,16 @@
 .body{
     width: 100%;
     height: 40rem;
-
     display: flex;
     flex-direction: row;
+}
+.left{
+    width: 50%;
+    height: 100%;
+    background-color: red;
+}
+.right{
+    width: 50%;
+    height: 100%;
+    background-color: blue;
 }
